# Spectre

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in
assets/shaders/: Default.frag  Default.vert
engine/: CMakeLists.txt
engine/include/: sppch.h
engine/include/Spectre/: Engine.h
engine/include/Spectre/Input/: InputCodes.h  Keyboard.h  Mouse.h
engine/include/Spectre/Rendering/: MeshBase.h  MeshInterface.h  Model.h  Renderer.h  RendererBase.h  RendererInterface.h  ShaderBase.h  ShaderInterface.h  TextureBase.h  TextureInterface.h  Vertex.h  Window.h
engine/include/Spectre/Rendering/Arch/OpenGL/: OpenGLMesh.h  OpenGLRenderer.h  OpenGLShader.h  OpenGLTexture.h
engine/include/Spectre/System/Logging/: Colours.h  Log.h  LogLevels.h
engine/src/Spectre/: Engine.cpp
engine/src/Spectre/Input/: Keyboard.cpp  Mouse.cpp
engine/src/Spectre/Rendering/: Model.cpp  Renderer.cpp  Window.cpp
engine/src/Spectre/Rendering/Arch/OpenGL/: OpenGLMesh.cpp  OpenGLRenderer.cpp  OpenGLShader.cpp  OpenGLTexture.cpp
game/: CMakeLists.txt
game/include/Game/: GameLogic.h
game/src/: Main.cpp
game/src/Game/: GameLogic.cpp
